[gd_scene load_steps=3 format=3 uid="uid://cll21i7067aix"]

[ext_resource type="Texture2D" uid="uid://b73gviogpwgsn" path="res://Space Shooter Assets/PNG/Enemies/enemyBlack3.png" id="1_atdjh"]
[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_cr3es"]

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_cr3es")
health = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_atdjh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-13, 21, -32, 27, -28, 38, -32, 39, -31, 41, -38, 42, -52, -3, -25, -36, -18, -36, -8, -42, 8, -42, 17, -36, 25, -36, 51, -3, 38, 42, 33, 42, 28, 39, 29, 30, 13, 23, 9, 33, -10, 33, -13, 20)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, -93)

[node name="health_label" type="Label" parent="."]
texture_filter = 1
offset_left = -13.0
offset_top = -68.0
offset_right = 49.0
offset_bottom = -45.0
text = "100"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
